[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["http2", "query", "tracing"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.8"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"

[dev-dependencies]
blake3 = "1.5.5"
bytes = "1.9.0"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
